<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAE8F8"
    android:padding="20dp"
    tools:context=".activities.login.LoginActivity">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_there"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="-40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll"/>

    <TextView
        android:id="@+id/tv_subHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ll_bg"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user_name"
            android:background="@drawable/et_bg"
            android:textColorHint="#a1a1a1"
            android:textColor="@color/black"
            android:drawableStart="@drawable/icon_person"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:autofillHints=""
            tools:ignore="TextFields" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#a1a1a1"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textSize="18sp"
                android:background="@drawable/et_bg"
                android:textColor="@color/black"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:autofillHints=""/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:backgroundTint="#88EAE2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_out1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="#227C2D"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:textColor="#227C2D"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_out1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>