<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.dogpages.DogBreedDetailsActivity">

    <LinearLayout
        android:id="@+id/ll_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_big_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/dog_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_dog_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@color/cardview_dark_background"
            android:contentDescription="@string/dog_image" />

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/iv_dog_image"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/bred_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/ll_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/breed_group"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_2"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/breed_origin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_3"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/bred_for"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_bred_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_4"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/life_span"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_life_span"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_5"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/temperament"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_temperament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_6"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/width"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_7"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ugvu"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>